<resources>
    <string name="facebook_app_id">626769970831825</string>
    <string name="app_name">Wallet</string>
    <string name="bank_account">Bank Account</string>
    <string name="credit_card">Credit Card</string>
    <string name="licence">Licence</string>
    <string name="identity">Identity</string>
    <string name="passport">Passport</string>
    <string name="wifi_router">Wifi Router</string>
    <string name="crime_details_lable">Details</string>
    <string name="date_picker_title">Date:</string>
    <string name="new_crime">add</string>
    <string name="delete_crime">Delete</string>
    <string name="toast_delete_crime">Deleted</string>

    <!-- BankAccount -->
    <string name="crime_title_lable">Title</string>
    <string name="crime_title_hint">Enter a title.</string>
    <string name="bank_name">Bank Name</string>
    <string name="name_on_account">Name on Account</string>
    <string name="account_type">Account Type</string>
    <string name="routing_number">Routing Number</string>
    <string name="account_number">Account Number</string>
    <string name="swift_code">SWIFT Code</string>
    <string name="iban_number">IBAN Number</string>
    <string name="pin">Pin</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="bank_name_hint">Enter Bank Name</string>
    <string name="name_on_account_hint">Enter Name on Account</string>
    <string name="account_type_hint">Enter Account Type</string>
    <string name="routing_number_hint">Enter Routing Number</string>
    <string name="account_number_hint">Enter Account Number</string>
    <string name="swift_code_hint">Enter SWIFT Code</string>
    <string name="iban_number_hint">Enter IBAN Number</string>
    <string name="pin_hint">Enter Pin</string>
    <string name="phone_hint">Enter Phone</string>
    <string name="address_hint">Enter Address</string>

    <!--Identity -->
    <string name="identity_hint">Enter Identity</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="sex">Sex</string>
    <string name="sex_hint">Enter Sex</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_date_hint">Enter Birth Date</string>
    <string name="occupation">Occupation</string>
    <string name="occupation_hint">Enter Occupation</string>
    <string name="company">Company</string>
    <string name="company_hint">Enter Company name</string>
    <string name="department">Department</string>
    <string name="department_hint">Enter Department</string>
    <string name="job_title">Job Title</string>
    <string name="job_title_hint">Enter Job Title</string>
    <string name="street">Street</string>
    <string name="street_hint">Enter Street</string>
    <string name="city">City/Town/Suburb</string>
    <string name="city_hint">Enter City/Town/Suburb</string>
    <string name="zip">Zip/Postal/Code</string>
    <string name="zip_hint">Enter Zip/Postal/Code</string>
    <string name="province">Province/State</string>
    <string name="province_hint">Enter Province/State</string>
    <string name="country">Country</string>
    <string name="country_hint">Enter Country</string>
    <string name="home_phone">Home Phone</string>
    <string name="home_phone_hint">Enter Home Phone</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="cell_phone_hint">Enter Cell Phone</string>
    <string name="business_phone">Bussiness Phone</string>
    <string name="business_phone_hint">Enter Bussiness Phone</string>
    <string name="user_name">User Name</string>
    <string name="user_name_hint">Enter User Name</string>
    <string name="reminder_question">Reminder Question</string>
    <string name="reminder_question_hint">Enter Reminder Question</string>
    <string name="reminder_answer">Reminder Answer</string>
    <string name="reminder_answer_hint">Enter Reminder Answer</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="web_site_hint">Enter Web Site</string>
    <string name="web_site">Web Site</string>
    <string name="ICQ">ICQ</string>
    <string name="ICQ_hint">Enter ICQ</string>
    <string name="skype">Skype</string>
    <string name="skype_hint">Enter Skype</string>
    <string name="forum_signature">Forum Signature</string>
    <string name="forum_signature_hint">Enter Forum Signature</string>

    <!-- WIFI Router -->
    <string name="base_station_name">Base Station Name</string>
    <string name="base_station_name_hint">Enter base Station Name</string>
    <string name="base_station_password">Base Station Password</string>
    <string name="base_station_password_hint">Enter Base Station Password</string>
    <string name="server">Server/ IP Address</string>
    <string name="server_hint">Enter Server/ IP Address</string>
    <string name="air_port_id">AirPort Id</string>
    <string name="air_port_id_hint">Enter AirPort ID</string>
    <string name="network_name">Network Name</string>
    <string name="network_name_hint">Enter Network Name</string>
    <string name="wireless_security">Wireless Security</string>
    <string name="wireless_security_hint">Enter your Wireless Security type</string>
    <string name="wireless_network_password">Wireless Network Password</string>
    <string name="wireless_network_password_hint">Enter Wireless Network Password</string>
    <string name="wireless_storage_password">Wireless Storage Password</string>
    <string name="wireless_storage_password_hint">Enter Wireless Storage Password</string>

    <!-- Licence -->
    <string name="height">Height</string>
    <string name="height_hint">Enter your Height</string>
    <string name="number">Number</string>
    <string name="number_hint">Enter the number</string>
    <string name="licence_class">Licence Class</string>
    <string name="licence_hint">Enter licence hint</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_date_hint">Enter your expiry date</string>


</resources>